--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="flexboxtest.css">
     <title>Document</title>
 </head>
 <body>
@@ -909,7 +909,7 @@
         </h3>
         </div>
         <div class="place-highlight"> 
-        <div class="alt-result-highlight" style="background-color:#FFD700" justify-self="r">FKT</div>
+        <div class="alt-result-highlight" style="background-color:#FFD700">FKT</div>
       </div>
       </div>
 
@@ -940,7 +940,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:red">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#8202;</div>
+            <div class="result-highlight" style="background-color:red">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
         </div>
     </div>
 
@@ -954,7 +954,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:red">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+            <div class="result-highlight" style="background-color:red">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
         </div>
     </div>
 
@@ -968,7 +968,7 @@
             </h3>
         </div>
           <div class="place-highlight">
-            <div class="result-highlight">9TH PLACE</div>
+            <div class="result-highlight">9TH</div>
         </div>
       </div>
 
@@ -982,7 +982,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#FFD700">1ST PLACE</div>
+            <div class="result-highlight" style="background-color:#FFD700">1ST</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -995,7 +995,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:silver;">2ND PLACE</div>
+            <div class="result-highlight" style="background-color:silver;">2ND</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1008,7 +1008,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#FFD700">1ST PLACE</div>
+            <div class="result-highlight" style="background-color:#FFD700">1ST</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1021,7 +1021,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#FFD700">1ST PLACE</div>
+            <div class="result-highlight" style="background-color:#FFD700">1ST</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1034,7 +1034,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#FFD700">1ST PLACE</div>
+            <div class="result-highlight" style="background-color:#FFD700">1ST </div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1047,7 +1047,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD </div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1060,7 +1060,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">2ND PLACE</div>
+            <div class="result-highlight"style="background-color:silver;">2ND</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1073,7 +1073,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1086,7 +1086,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">5TH PLACE</div>
+            <div class="result-highlight">5TH</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1099,7 +1099,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">12TH PLACE</div>
+            <div class="result-highlight">12TH</div>
         </div>
     </div>
 
@@ -1116,7 +1116,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1129,7 +1129,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1142,7 +1142,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#FFD700">1ST PLACE</div>
+            <div class="result-highlight" style="background-color:#FFD700">1ST</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1155,7 +1155,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1168,7 +1168,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1181,7 +1181,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">4TH PLACE</div>
+            <div class="result-highlight">4TH</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1194,7 +1194,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">4TH PLACE</div>
+            <div class="result-highlight">4TH </div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1207,7 +1207,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">10TH PLACE</div>
+            <div class="result-highlight">10TH </div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1220,7 +1220,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">5TH PLACE</div>
+            <div class="result-highlight">5TH </div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1233,7 +1233,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">13TH PLACE</div>
+            <div class="result-highlight">13TH</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1246,7 +1246,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">6TH PLACE</div>
+            <div class="result-highlight">6TH </div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1259,7 +1259,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD </div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1272,7 +1272,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">4TH PLACE</div>
+            <div class="result-highlight">4TH </div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1285,7 +1285,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">9TH PLACE</div>
+            <div class="result-highlight">9TH </div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1298,7 +1298,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1311,7 +1311,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1324,7 +1324,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1337,7 +1337,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">8TH PLACE</div>
+            <div class="result-highlight">8TH</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1350,7 +1350,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">9TH PLACE</div>
+            <div class="result-highlight">9TH</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1363,7 +1363,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#FFD700">1ST PLACE</div>
+            <div class="result-highlight" style="background-color:#FFD700">1ST</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1376,7 +1376,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1389,7 +1389,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">4TH PLACE</div>
+            <div class="result-highlight">4TH</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1402,7 +1402,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:silver;">2ND PLACE</div>
+            <div class="result-highlight" style="background-color:silver;">2ND</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1415,7 +1415,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1428,7 +1428,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">19TH PLACE</div>
+            <div class="result-highlight">19TH</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1441,7 +1441,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">4TH PLACE</div>
+            <div class="result-highlight">4TH</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1454,7 +1454,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1467,7 +1467,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:silver;">2ND PLACE</div>
+            <div class="result-highlight" style="background-color:silver;">2ND</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1480,7 +1480,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1493,7 +1493,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">8TH PLACE</div>
+            <div class="result-highlight">8TH</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1506,7 +1506,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight">6TH PLACE</div>
+            <div class="result-highlight">6TH</div>
         </div>
     </div>
     <div class="timeline-item">
@@ -1519,7 +1519,7 @@
             </h3>
         </div>
         <div class="place-highlight">
-            <div class="result-highlight" style="background-color:#CE8946">3RD PLACE</div>
+            <div class="result-highlight" style="background-color:#CE8946">3RD</div>
         </div>
     </div>
 
