footer and resize work

--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
         </div>
         <div class="center-column">
             <h3 class="race-result">
-                <div class="item" style="">TRANS WOMEN BANNED - UCI COMPETITION</div>
+                <div class="item">TRANS WOMEN BANNED - UCI COMPETITION</div>
             </h3>
         </div>
         <div class="place-highlight">
@@ -952,7 +952,7 @@
         </div>
         <div class="center-column">
             <h3 class="race-result">
-                <div class="item" style="">TRANS WOMEN BANNED - BELGIAN WAFFLE RIDE</div>
+                <div class="item">TRANS WOMEN BANNED - BELGIAN WAFFLE RIDE</div>
             </h3>
         </div>
         <div class="place-highlight">
